--- a/VegaIT- project2/CSS/Index.scss
+++ b/VegaIT- project2/CSS/Index.scss
@@ -829,33 +829,44 @@ overflow-y:auto;
             @include m.breakpoint(mobile){
                 width:100%;
          }
+      
         .opinions__comments-container{
             background-color:$white;
             display:flex;
+            width:auto;
+            height:100%;
             flex-direction:column;
             box-shadow:0px 5px 25px rgba(0, 0, 0, 0.35);
-            -webkit-box-shadow:0px 5px 25px rgba(0, 0, 0, 0.35);
-            
-        
+            -webkit-box-shadow:0px 5px 25px rgba(0, 0, 0, 0.35);  
+     
          .opinions__slider{
+             position:relative;
              display:flex;
+             height:100%;
              flex-direction:row;
-             overflow-x:auto;
-             scroll-snap-type: x mandatory;
-             -ms-scroll-snap-type: x mandatory;
+            //  scroll-snap-type: x mandatory;
+            //  -ms-scroll-snap-type: x mandatory;
+             
             //  scroll-behavior: smooth;
-             &::-webkit-scrollbar {
-                display: none;
-                -ms-overflow-style: none;
-                scrollbar-width: none;
-              }
-             .opinions__slide{
-                scroll-snap-align: start;
-                 flex: 0 0 100%;  
-                 padding:0 3.1rem 0 3rem;
+            //  &::-webkit-scrollbar {
+            //      position:absolute;
+            //     display: none;
+            //     -ms-overflow-style: none;
+            //     scrollbar-width: none;
+            //   }
+              .opinions__slide{ 
+                position:relative;
+                display:none;
+                padding:0 3.1rem 0 3rem;
              }
+             .active-slide{
+                display:flex;
+                width:100%;
+                height:100%;
+            }
             
          }
+        
          
         //----Opinions----//
 
@@ -1004,6 +1015,7 @@ overflow-y:auto;
                     aspect-ratio:1;
                     background-color:$white;
                     border:none;
+                    opacity:1;
                     cursor: pointer;
                     
                     @include m.breakpoint(mobile){
@@ -1018,11 +1030,14 @@ overflow-y:auto;
                         }
                     }
                 }
-                .opinions__btn--next{
-                    opacity:1;
-                }
-                .opinions__btn--previous{
+                .disabled{
                     opacity:0.5;
+                    pointer-events:none;
+                }
+                .opinions__dots{
+                    display:flex;
+                    align-items:center;
+                    gap:1.5rem;
                 }
                     .opinions__radio{
                         color:$red;
@@ -1032,25 +1047,13 @@ overflow-y:auto;
                         opacity:0.5;
                         border-radius:50%;
                         border:none;
+                        transition:all 300ms ease-out;
                     }
-                    #radio1{
-                        opacity:1;
-                        width:1.9rem;
-                        height:1.9rem;
-                        transition:300ms ease-out;
-                    }
-                    #radio2{
-                     opacity:0.5;
-                     width:1.3rem;
-                     height:1.3rem;
-                     transition:300ms ease-out;
-                  }
-                 #radio3{
-                     opacity:0.5;
-                     width:1.3rem;
-                     height:1.3rem;
-                     transition:300ms ease-out;
-                  }
+                  .active-dot{
+                    opacity:1;
+                    width:1.9rem;
+                    height:1.9rem;
+                }
                 }
           }
         }
